--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -16,7 +16,9 @@
     <script>
             // "letter word sentence",
             // "single double triple",
-
+        Language = [
+            "english chinese trans-turk"
+        ]
         Asniks = [
             "stick stack stabled colored",
             "nouns pronouns adjectives numerals verb adverbs articles prepositions conjunctions interjections auxiliary"
@@ -26,11 +28,9 @@
             "id index name desc content text",
             "rint kint type kind classify",
         ]
-        Language = [
-            "english chinese trans-turk"
-        ]
+
         Programs = [
-            "js java cs cpp",
+            "html js java  cpp",
             "split slice  first last  intercept replace charAt lower upper connect ",
             "function var const import export",
             "public private ",
