--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -39,7 +39,8 @@
             "  , () [] {}.",
         ]
 
-        //Utility Piroity Frequent 
+        //Utility Piroity.Sequence
+        //Frequent:Statistic
         //Kint.Count = nouns:树 80次 verb:砍 verb:伐
         //Start End Length
         var Rint = [
