--- a/AngelNetwork/analytical/asnic/shapable.html
+++ b/AngelNetwork/analytical/asnic/shapable.html
@@ -87,8 +87,11 @@ Flat.Side~Caide
 
 Transcolor
     R G B Alpha
- 
+    //sabora saborla sbl
+    //belarus bls
+    //lbs
     var SymbolPrioity = ["Separator", "Link", "Bracket"];
+    Repeatable
     index
 //Axis:tricycle 
 var Directive =
@@ -96,8 +99,8 @@ var Directive =
         ["Top", "Left", "Right", "Bottom"]
     
     ]; 
-    Odimentional = ["occidental","oriental","vertical","horizontal"]
-Nouns Pronouns Adjectives Numerals Verb Adverbs Articles Prepositions Conjunctions Interjections auxiliary  ;
+Odimentional = ["occidental","oriental","vertical","horizontal"]
+Nouns Pronouns Adjectives Numerals Verb Adverbs Articles Prepositions Conjunctions Interjections auxiliary ;
 //实词：表示实在意义的词，有名词、动词、形容词、数词、量词、代词。?
 //  虚词：不表示dao实在意义而表示语法意义的词，有：副词、介词、连词、助词、叹词、拟声词。
 //  1,名词bai,Nouns (n.) 表示人或事物的名称 box,pen,tree,apple
