--- a/Rastera/asnic/access-term/formula.html
+++ b/Rastera/asnic/access-term/formula.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 
-<div id="contain" style="height:400px;">
-<pre id="editor">
+    <div id="contain" style="height: 400px;">
+        <pre id="editor">
 解释型定义  Sprints
 抹布行为
 新疆问题
@@ -195,28 +195,33 @@ AJAX Codex
 hliGaokter
 　　henCEnzic kanSzidor CallJuarez
 
+Gede 
+    Nick 
+    Elante 
+    Rhrea //era
+
 杨明：天抱怨量
     不是去上
 </pre>
-<div id="compiler">
-    <div id="console"></div>
-    <div id="table"></div>
-    <div id="vector">
-    <!--<svg style="height:0%;"></svg>-->
+        <div id="compiler">
+            <div id="console"></div>
+            <div id="table"></div>
+            <div id="vector">
+                <!--<svg style="height:0%;"></svg>-->
+            </div>
+        </div>
+        <div id="commit">
+            <div id="compiled" desc="&234"></div>
+        </div>
     </div>
-</div>
-<div id="commit">
-    <div id="compiled" desc="&234"></div>
-</div>
-</div>
 
-<div id="java">
-    <script src="../../content/ace-editor/ace.js"></script>
-    <script src="../../content/ace-editor/ace-settings.js"></script>
-    <script type="text/javascript">
+    <div id="java">
+        <script src="../../content/ace-editor/ace.js"></script>
+        <script src="../../content/ace-editor/ace-settings.js"></script>
+        <script type="text/javascript">
        // Asnical = 
-    </script>
-</div>
+        </script>
+    </div>
 </body>
 
 </html>
