--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -170,6 +170,20 @@ Wingfly
             Free.France.Wall.Poukour
             Viliage.Lowrate~Earthsoil 
     Nodeoff.2WayStraint.Dangerous.Keyboard
+12/22
+    Restrict.Classroom.Won't.Let.Over
+    Klass Link  Burrow
+        \\Vos:开垦 Havest 
+    Underball.4sMetro.Lzc.Ljz.Aser:kolor
+    S.dragged night can not sleep
+    Religious.Christian.Rhera.StartUtitlized //Rhrea era
+    Gede Nick Elante Rhrea
+    Introduced Era AD BC
+        Matricwhich.Geological.Country
+    *Novel. Aser'creed.ConcenedWowen <-> Rhera.RapedIndex<->CleanRint,Typeclean
+        InsideBody.Rotated
+        File:Persvison.Html:Possess:BeingDefined.Range:.Line300x:Cutrual.Geological?.Soilearth
+
 </pre>
 </body>
 </html>
