--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -177,7 +177,7 @@
 </body>
 </html>
 <!--
-    雪碧饮料 Incident
+雪碧饮料 Incident
     微分子
     赵dna不干佛教 就不能复仇 为什么这么信佛教 海丽阿姨
     叫仙家去复仇 压着呢
@@ -254,12 +254,23 @@
     HxW 照相
 
 闹歪边 曲流拐弯的部分：Vesaid 黄鼠狼 唱歌 音乐
-*Wrapped [文(疼type range)武]
-    打忘 秘密 交织 自己搞自己 老鼠扛枪
 
-    11.18 05:25
+*EarthEnvironment:Pocessed->BeingPushed.Wrapped
+    文武
+        疼type range
+        InsideBody EachComplaint
+            Sequence.Showup
+                Revenge 
+                Flatship.Think.Partially
+                Distance//时而近期远，远而近奇是
+                Wjcking.SelfCursed
+        Sexcast.feedback.ShadeWhat:Histroy,Background
+        打忘 秘密 交织 自己搞自己 老鼠扛枪
+    武文
+End.Push&Back
 
-persevide
+11.18 05:25
+
 Rose 健康 美丽 人知
 玩
 anti善type
@@ -289,5 +300,24 @@ funcback
 付丹龘薛 铺速austere
 时间 区域 家庭 父母 兄弟姐妹
 BodyPart.Separated
+    Possess.Renliy.Persuade.InvisibleLife:Interact&Interfaced
+        //赛瑞尔神话 绝望球鼓推 梳淑梅 搞完
+Possess:BeingDefined.Range:
+    Human.Borned,Kid,Teenager,Middle,Old:
+        Never.Notice&Defined.Popupwords.InsideBody
+        Popupwords.General&Genetical.KnownAs|Reconize.HumanCharacters
+    Barlevel.Speak.InsideBody:DifferFrom.Popupwords
+
+    1.Guidance with word indexes
+    2.Popup
+    3.Talking
+
+    HumanHealth.Capability:Effect
+        Work or Not        
+Possess.Forback:Go-out&Get-in.Yet:
+
+Possessed.StartInsideBody
+        Selfish First Shade human used to be    
+End
 
 -->
