--- a/AngelNetwork/analytical/asnic/Sabora.html
+++ b/AngelNetwork/analytical/asnic/Sabora.html
@@ -22,7 +22,8 @@ Dynamicals =
             ['Separator','Link','Bracket']
             
     ]
-Dynamical.Utility
+//Dynamical.Utility
+
 Separator,Link
 Link,Separator
 Separator,Bracket
