--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -120,4 +120,5 @@ Impuluse.Sequence
         记录 Line Pine
         1.关键词 Splite 是否存在 如果不存在： Easyfirst 结束单条 不在分析函数 否则 有Bracket 如果有 EasyFirst 一个就行不在进行复杂操作 执行单条：提取和记录Pine Line            
         2.是否混编 什么语言 如果混编 performance
-        3.初期多个结果 形成 habits-->
+        3.初期多个结果 形成 habits
+-->
