--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -21,7 +21,8 @@
         ]
         Asniks = [
             "stick stack stabled colored",
-            "nouns pronouns adjectives numerals verb adverbs articles prepositions conjunctions interjections auxiliary"
+            "nouns pronouns adjectives numerals verb adverbs articles prepositions conjunctions interjections auxiliary",
+            "singline, functional"
         ]
         Identities = [
             "is",
@@ -38,11 +39,14 @@
         Kites = [
             "  , () [] {}.",
         ]
+        //分割下面段落文字用“，”        
+        //用，分割文件 "sdcard/files/abc.txt" \\用工具栏载入path
 
         //Utility Piroity.Sequence
         //Frequent:Statistic
         //Kint.Count = nouns:树 80次 verb:砍 verb:伐
         //Start End Length
+        
         var Rint = [
 
         ]
