--- a/AngelNetwork/analytical/copy.html
+++ b/AngelNetwork/analytical/copy.html
@@ -21,7 +21,7 @@
     });
  
     clipboard.on('error', function(e) {
-        console.log(e);
+        document.writeln(e);
     });
   </script>
  </body>
