changed name term added kof for anaylsis

--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -22,7 +22,7 @@
         Asniks = [
             "stick stack stabled colored",
             "nouns pronouns adjectives numerals verb adverbs articles prepositions conjunctions interjections auxiliary",
-            "singline, functional"
+            "singeline, functional"
         ]
         Identities = [
             "is",
