--- a/Rastera/asnic/access-term/term.html
+++ b/Rastera/asnic/access-term/term.html
@@ -129,7 +129,9 @@ Creal:reminder?.first
 　　Tetris =Transblink listenθsudden Sense Shout
 　　Letwesto Look hear taste smell talk
 　　
-SelfGet Sefket （关于情感as Start 启发性索引的定义）
+SelfGet Sefket 
+      力有关.Transcolor 调换
+      关于情感as Start 启发性索引的定义
 　　Index ilyai ilyks iassk(instant emotional index)
 　　Rhea
 　　阿尔戈斯?ργο?
