--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -265,6 +265,7 @@
                 Distance//时而近期远，远而近奇是
                 Wjcking.SelfCursed
         Sexcast.feedback.ShadeWhat:Histroy,Background
+        不同地方 身体舰船文
         打忘 秘密 交织 自己搞自己 老鼠扛枪
     武文
 End.Push&Back
@@ -319,5 +320,4 @@ Possess.Forback:Go-out&Get-in.Yet:
 Possessed.StartInsideBody
         Selfish First Shade human used to be    
 End
-
 -->
