--- a/AngelNetwork/analytical/asnic/shapable.html
+++ b/AngelNetwork/analytical/asnic/shapable.html
@@ -35,6 +35,7 @@ var Leon = ["Source", "Orgin"]; //Source = Substance
 var Maticals = ["Flat", "Tricycle","Metric"];//Metric立体
  Earth.EyeVision.Flat.Isoic-Metric
  Earth.EyeVision.Flat.Trikon-Metric
+ Ctr.Kaiter
     //固 顶 立
     //Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
     //Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
@@ -44,7 +45,7 @@ var Axis =
     [
         ["Center","Side", "Angle" ]//Caisde saide kaide 立体面角
     ];    
-    Caide 
+
     CaideKorner //RoundTriangle
 
     Maticals
