--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -206,6 +206,11 @@ Wingfly
     电影：削涩酮辛 商嗨Lu一 不婷丛之灰
     妥邪梅果?=16-18 age athena  
         AdolescentMoive：  GrapeColor.IncludedEnergy:YoungLove
+12/24
+    Secular-Sanctuary  Worship Scarefice HeavenAtlar-Wjcking~DreamAthena
+    HellENic Egypt Aztec
+    Light Underground Dark
+    找(我)鑫 盒平洞侨 青人姐 LOnely=古都:(耳关 女因)
 </pre>
 </body>
 </html>
