--- a/AngelNetwork/analytical/asnic/basic.html
+++ b/AngelNetwork/analytical/asnic/basic.html
@@ -5,6 +5,7 @@
     <title></title>
     <!--  <script src="../content/jquery/jquery-3.5.1.min.js"></script>-->
     <script src="../../content/vue/vue.min.js"></script>
+    <script src="../../models/ket-struct.js"></script>
 </head>
 
 <body>
@@ -14,52 +15,7 @@
 {{details()}}
  </pre>
     <script>
-        // "letter word sentence",
-        // "single double triple",
-        Language = [
-            "english chinese trans-turk"
-        ]
-        Asniks = [
-            "stick stack stabled colored",
-            "nouns pronouns adjectives numerals verb adverbs articles prepositions conjunctions interjections auxiliary",
-
-        ]
-        Identities = [
-            "id index name desc content text",
-        ]
-        Klass = [
-            'is',
-            'Rint rant rank ranic rink Kint Kinc Kant knic kind type',
-            'classify category',
-            "singeline, functional"
-        ]
-        Marks = [
-            'html'
-        ]
-        Programs = [
-            'js java cpp',
-            'import export using include',
-            'namespace package union struct friend class interface function',  
-            'private protected interneal public virtual base super extend implements override overload implicit explicit',
-            'inline static new extern const readonly operator delete void self this return',            
-            'template default mutable volatile',
-            'auto var let char wchar_t int short float bool boolean double long unsigned enum object params ',
-            'sbyte byte ushort uint ulong decimal null false true ',
-            'out ref event delegate lock synchronized thread',
-            'if else break switch case goto yield',
-            'for foreach do while continue',
-            'try catch throw finally',
-            'typedef typeid nameof typename sizeof',
-            'get set value attribute',
-            'instanceof equals'
-        ]
-        Funkes = [
-            'split slice  first last  intercept replace charAt lower upper connect',
-            'disrepeat ',
-        ]
-        Kites = [
-            "  , () [] {} . + - * /",
-        ]
+      
         //分割下面段落文字用“，”        
         //用，分割文件 "sdcard/files/abc.txt" \\用工具栏载入path
 
