mac slower sur alt reboot windows

--- a/AngelNetwork/analytical/asnic/shapable.html
+++ b/AngelNetwork/analytical/asnic/shapable.html
@@ -11,7 +11,7 @@
 <body>
      
 <pre id="circle" >
-新定义：Absolute Absoic Apisoda
+新定义：Absolute Absoic absoke Apisoda
 //Absolute?=MonismDuralism 
 //Leonic  icon3~Aikon： 起源 源起 sphere handle circle 
 //var ActionBehavior = ["Drag", "Push", "StackOut"];
