--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -211,6 +211,15 @@ Wingfly
     HellENic Egypt Aztec
     Light Underground Dark
     找(我)鑫 盒平洞侨 青人姐 LOnely=古都:(耳关 女因)
+
+    Geo?=NearlyChopFinger Arousen.Sympathetic
+        Wjcking.SchoolAge(12-15)<->Orgensa.CuteningVegetables
+        Rotatened.SwipeChair?=Orgensa@抡圆
+        SnicInfluece.Wjcking.CenterPark//种花巩源 镁郭牛月
+        //老掌沟奇遇记 经络提开飞碟 Dynamical Headtitle&PageKover:2页面
+    Geo-sprite&Bescripted//Geosprite
+
+    倒角Z 蚩尤 城池 锂滋撑(老我找挝掌于沟几)
 </pre>
 </body>
 </html>
