--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -320,4 +320,9 @@ Possess.Forback:Go-out&Get-in.Yet:
 Possessed.StartInsideBody
         Selfish First Shade human used to be    
 End
+
+解释量
+    纸上写字
+    空中赌 
+    BrainLike GroupPartial (cfs)
 -->
