--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -220,6 +220,8 @@ Wingfly
     Geo-sprite&Bescripted//Geosprite
 
     倒角Z 蚩尤 城池 锂滋撑(老我找挝掌于沟几)
+12/26
+    Acm.Intricate,differ.people=portalling
 </pre>
 </body>
 </html>
