--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -223,6 +223,11 @@ Wingfly
 12/26
     Land of Pharaohs
     Acm.Intricate,differ.people=portalling
+    Chi^e^cks 捅妓 G(J)eues Ysu Hai~er Hell~O M n 氖头
+    Renliy.Rock.God&Ghost&.UnderReaction<-AntiBack
+
+    仰休:\Dang^er\急隶断
+        Krytical (Geonk/true) Penguin 血白韧 色光 
 </pre>
 </body>
 </html>
