--- a/Rastera/asnic/vesaier/revenez.html
+++ b/Rastera/asnic/vesaier/revenez.html
@@ -89,8 +89,9 @@ Telephoniz
     硕泰克方法Attack
     广告 
     IP地址 跟踪
-Threat
-    Range Group
+Panic&Threat
+    ContrictSoundies 第一次刷棋 Underball-Neverforget 
+    DIgdug panic rate threat
     </pre>
 </body>
 </html>
