leonic object filter predict

--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -229,6 +229,7 @@ Wingfly
     仰休:\Dang^er\急隶断
         Krytical (Geonk/true) Penguin 血白韧 色光 
     眼梳走钓冈~寺 \^Orgeinsa 摽布竺乐\  庞泄 西High~L^K 贞得 肾潘
+    ?≈没孩子 %50-100
 </pre>
 </body>
 </html>
