--- a/Rastera/asnic/serial/persvision.html
+++ b/Rastera/asnic/serial/persvision.html
@@ -325,4 +325,6 @@ End
     纸上写字
     空中赌 
     BrainLike GroupPartial (cfs)
+拱主老牢 Water Kind Person Komingout
+Rapid.Index.Rotate.InsideBody.Called:Human!?=Anihuman
 -->
