--- a/AngelNetwork/analytical/asnic/Sabora.html
+++ b/AngelNetwork/analytical/asnic/Sabora.html
@@ -34,7 +34,7 @@
         //predict
         Leonic.filter(function (property) {
             //if (property[) 
-            document.write(property() + "<br/>");
+            document.write(property + "<br/>");
         //    return 
         });
 
