--- a/AngelNetwork/analytical/asnic/ketstart.html
+++ b/AngelNetwork/analytical/asnic/ketstart.html
@@ -14,16 +14,24 @@
     <script type="text/javascript">
         //"use strict";
         Object.prototype.filter = function (predicate) {
+            //var result = {};
+            //for (key in this) {
+            //    if (this.hasOwnProperty(key) && !predicate(this[key])) 
+            //        result[key] = this[key];
+            //}
+            //return result;
+
+            var keys = Object.keys(this);
+            var values = Object.values(this);
             var result = {};
-            for (key in this) {
-                if (this.hasOwnProperty(key) && !predicate(this[key])) 
-                    result[key] = this[key];
+            for (var i = 0; i < keys.length; i++) {
+                if (this.hasOwnProperty(keys[i]) && !predicate(this[keys[i]]))
+                    result.push(i,)
             }
-            return result;
         };
         //Unicode.Language
-        //Transform.Solid.Kolor
-        //Axis Odimentional think
+        //Transform.Solid.Kolor Random.ExtremEylex.Earthly^Rotate 
+        //Axis Odimentional think Directive.Left?.Matrix?.Right
         Leonic = {
             key4: "value2",
             key5: function () {
