--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -230,6 +230,19 @@ Wingfly
         Krytical (Geonk/true) Penguin 血白韧 色光 
     眼梳走钓冈~寺 \^Orgeinsa 摽布竺乐\  庞泄 西High~L^K 贞得 肾潘
     ?≈没孩子 %50-100
+12/27
+  1.Serialize.Orientals.FirstBeingAsked.:
+    树叶 颜色 贝叶经 最轻&金属 图纸 搭建,
+    理序 介质 职业 人细胞变化
+    Generally^Publish:
+        Hand-writings
+  2.三角族
+        1?.被限制创造力
+        2?.是否超越实际创造力，物质直接出来、而不用像用已经发明的
+        3?.类似于结绳记忆被剽窃后
+  3.萨尼克现在西方发明电脑
+     东中方 除了方位影响？
+ 4.切入点 理序 牵制 创造力 前瞻性 笨怨俗
 </pre>
 </body>
 </html>
