--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -232,7 +232,7 @@ Wingfly
     ?≈没孩子 %50-100
 12/27
   1.Serialize.Orientals.FirstBeingAsked.:
-    树叶 颜色 贝叶经 最轻&金属 图纸 搭建,
+    树叶 颜色 贝叶经 人类找过保存记忆性 类似于最轻&金属  图纸 搭建, 
     理序 介质 职业 人细胞变化
     Generally^Publish:
         Hand-writings
