--- a/AngelNetwork/analytical/asnic/shapable.html
+++ b/AngelNetwork/analytical/asnic/shapable.html
@@ -35,11 +35,13 @@ var Leon = ["Source", "Orgin"]; //Source = Substance
 var Maticals = ["Flat", "Tricycle","Metric"];//Metric立体
  Earth.EyeVision.Flat.Isoic-Metric
  Earth.EyeVision.Flat.Trikon-Metric
- Ctr.Kaiter
+ Definite:Ctr^Kaiter
     //固 顶 立
     //Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
     //Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
-var Solid = ["Circle", "Trangle", "Rectangle"]
+var Solid = ["Circle", "Trianet", "Rectanet"] 
+var Angleout =["Triangle","Rectangle"]  //Ir regular
+ var Around= Triangular Rectangular
 var Route = ["Dot", "Line", "Area"]; //3A sequalet 回list        Geometric 
 var Axis =
     [
