--- a/AngelNetwork/analytical/asnic/ketstruct.html
+++ b/AngelNetwork/analytical/asnic/ketstruct.html
@@ -48,7 +48,14 @@
                 document.write("f5");
             }, function () { },
                 ],
-            
+            Funcks: [
+                ["l124-l80P0-END","l124-l80:P0-END","l124-l80:P0-END"],
+                ["l124-l80P0-END","l124-l80:P0-END","l124-l80:P0-END"],
+                ["l124-l80P0-END","l124-l80:P0-END","l124-l80:P0-END"],
+                ["l124-l80P0-END","l124-l80:P0-END","l124-l80:P0-END"],
+                ["l124-l80P0-END","l124-l80:P0-END","l124-l80:P0-END"],
+                ["l124-l80P0-END","l124-l80:P0-END","l124-l80:P0-END"],
+            ],
             //RectanetX Metric^k^X RectangeIndex
             //Subindex
             'Func-1-Index:Ketstart:?Each&Space&': function () {
