--- a/AngelNetwork/analytical/asnic/shapable.html
+++ b/AngelNetwork/analytical/asnic/shapable.html
@@ -93,7 +93,9 @@ Transcolor
     //sabora saborla sbl
     //belarus bls
     //lbs
-    var SymbolPrioity = ["Separator", "Link", "Bracket"];
+    var celebrate = ["Separator", "Linker", "Bracket"];
+    //line pine:letter word
+    letoud
     Repeatable
     index
 //Axis:tricycle 
@@ -102,7 +104,7 @@ var Directive =
         ["Top", "Left", "Right", "Bottom"]
     
     ]; 
-Odimentional = ["occidental","oriental","vertical","horizontal"]
+<!--O= ["occidental","trilyo","oriental","vertical","horizontal"]-->
 Nouns Pronouns Adjectives Numerals Verb Adverbs Articles Prepositions Conjunctions Interjections auxiliary ;
 //实词：表示实在意义的词，有名词、动词、形容词、数词、量词、代词。?
 //  虚词：不表示dao实在意义而表示语法意义的词，有：副词、介词、连词、助词、叹词、拟声词。
