--- a/AngelNetwork/analytical/asnic/shapable.html
+++ b/AngelNetwork/analytical/asnic/shapable.html
@@ -94,7 +94,10 @@ Transcolor
     //belarus bls
     //lbs
     var celebrate = ["Separator", "Linker", "Bracket"];
-    //line pine:letter word
+    //line pine:letter symbol word
+    //each:letter is a type of kdkm.language 
+    //each&multiple:symbols
+    //each&mulltiple:word
     letoud
     Repeatable
     index
