--- a/AngelNetwork/analytical/asnic/shapable.html
+++ b/AngelNetwork/analytical/asnic/shapable.html
@@ -94,10 +94,15 @@ Transcolor
     //belarus bls
     //lbs
     var celebrate = ["Separator", "Linker", "Bracket"];
-    //line pine:letter symbol word
+
+   letsaid =letter symbol word
+ each mothers
+ single mutliple    
+  singline mutiline
     //each:letter is a type of kdkm.language 
     //each&multiple:symbols
     //each&mulltiple:word
+
     letoud
     Repeatable
     index
