--- a/Rastera/asnic/rastera/transcolor.html
+++ b/Rastera/asnic/rastera/transcolor.html
@@ -243,6 +243,9 @@ Wingfly
   3.萨尼克现在西方发明电脑
      东中方 除了方位影响？
  4.切入点 理序 牵制 创造力 前瞻性 笨怨俗
+
+BugInsect:12/13
+    BrianRight:铀恼婬尚 Geosprite.EarthDate:12.24 7-8:00PM
 </pre>
 </body>
 </html>
