--- a/AngelNetwork/analytical/asnic/shapable.html
+++ b/AngelNetwork/analytical/asnic/shapable.html
@@ -43,7 +43,7 @@ Flat.Earth.Solid
     //固 顶 立
     //Measure:Metric.Flat.4Cut = Triangle(Eclipse) ?= Rectangle take more spaces 
     //Defintion.Axis.SideFirst:三个边完全相等 = Earth 60 degree
-var Solid = ["Circle", "Trianet", "Rectanet"] 
+var Solid = ["Circle", "Trianet", "Rectan"] //Radical
 var Angleout = Triangle Rectangle Iregular Regular 
         Circulet Sequallet Sequalled
  var Around= Triangular Rectangular
@@ -105,7 +105,7 @@ Generality Kount Count.
     single mutlipe
     sin bin tryin rekcet #multi
     each arther^s  other^s mothers 
-Solid.Rectent.Rectangle:    
+Solid.Rectan.Rectangle:    
     Line Pine    Row~s Col^s  Rowlet Colunet   Rowns Columns
 Solid.Earth.ProjectLine
     singline biterline triyline receline #mutiline
